[package]
name = "tokio-fluent"
version = "0.4.3"
authors = ["johnmanjiro13"]
edition = "2021"
description = "A fluentd client using tokio"
license = "MIT"
repository = "https://github.com/johnmanjiro13/tokio-fluent"
keywords = ["fluentd", "tokio"]
readme = "README.md"
include = [
  "**/*.rs",
  "Cargo.toml",
  "README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
bytes = { version = "1.4.0", features = ["serde"] }
chrono = "0.4.26"
log = "0.4.20"
rmp-serde = "1.1.2"
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.31.0", features = ["net", "time", "io-util", "rt", "sync"] }
uuid = { version = "1.5.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
